--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 git+https://gitee.com/prehisle_admin/olymat.git
 git+https://gitee.com/prehisle_admin/olymat_comm.git
+playwright>=1.40.0
+pytest-asyncio>=0.21.0
